--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development node --watch --env-file=.env src/index.js "
+    "dev": "cross-env NODE_ENV=development node --watch --env-file=.env src/index.js",
+    "start": "node --env-file=.env  src/index.js"
   },
   "keywords": [],
   "author": "",
