--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "cross-env NODE_ENV=development node --watch --env-file=.env src/index.js",
-    "start": "node --env-file=.env  src/index.js"
+    "start": "node src/index.js"
   },
   "keywords": [],
   "author": "",
