--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.21.1",
     "helmet": "^8.0.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.13.1"
   }
 }
